<?xml version="1.0"?>
<package format="2">

  <name>geography_msgs</name>
  <version>0.1.0</version>
  <description>The geography_msgs package includes message definitions for geography-related data.</description>

  <license>MIT</license>

  <author email="pcdangio@gmail.com">Paul D'Angio</author>
  <maintainer email="pcdangio@gmail.com">Paul D'Angio</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>